<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="noExcludeDescendants"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/nodeNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/node_name"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/serverHostInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/server_host"
            android:inputType="textUri"
            android:maxLines="1" />

        <EditText
            android:id="@+id/controlPortInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/control_port"
            android:inputType="number"
            android:maxLines="1"
            android:text="@string/default_control_port" />

        <EditText
            android:id="@+id/tokenInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/shared_token"
            android:inputType="textPassword"
            android:maxLines="1" />

        <CheckBox
            android:id="@+id/showTokenCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_token" />

        <EditText
            android:id="@+id/fingerprintInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="top|start"
            android:hint="@string/certificate_fingerprint"
            android:inputType="textNoSuggestions"
            android:maxLines="3" />
    </LinearLayout>
</ScrollView>
